create basic recipe structure

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/veg-tempura.html">Vegetable tempura</a>
+       <p> <a href="recipes/veg-tempura.html">Vegetable tempura</a></p>
+
+       
     </body>
 </html>
