--- a/recipes/veg-tempura.html
+++ b/recipes/veg-tempura.html
@@ -6,5 +6,36 @@
     </head>
     <body>
         <h1>Vegetable Tempura</h1>
+        <p> <img src="../img/veg-tempura.jpg" alt="picture of vegetable tempura"></p>
+
+       <p><h4>Description</h4></p>
+
+       <p>Alongside sushi and ramen, tempura is another mandatory menu item for Japanese restaurants. Encased in a crunchy, crispy yet light batter, these perfectly deep-fried seafood, and vegetable are seriously addicting.
+       </p>
+
+       <p>Some of the common vegetables used for Tempura include Japanese sweet potatoes, mushrooms (shiitake or king oyster are delicious), Kabocha squash, bell peppers, lotus roots, and eggplant. When I make vegetable tempura at home, I also like to include shiso leaves as well.</p>
+
+       <p><h4>Ingredients:</h4></p>
+
+       <p><ul>
+        <li>Sweet potato</li>
+        <li>Squash</li>
+        <li>Lotus root</li>
+        <li>King oyster mushrooms</li>
+        <li>Eggplant</li>
+        <li>Shiso leaves</li>
+       </ul></p>
+
+       <p><h4>Preparation:</h4></p>
+
+       <p><ol>
+        <li>While the oil is heating up, prepare the tempura batter. Gather all the ingredients.</li>
+        <li>Sift the all-purpose flour into a large bowl.</li>
+        <li>Add the iced water to a measuring cup or bowl. Then, add the egg.</li>
+        <li>Whisk the egg and water mixture vigorously and discard the foam on the surface.</li>
+        <li>Slowly pour the egg mixture into the flour while mixing the batter with chopsticks in a figure 8 pattern for about 15-20 seconds. Do not overmix to avoid activating the wheat gluten; it's fine to and leave some lumps in the batter. Keep the batter cold at all times by adding 1-2 ice cubes to the batter or by putting the batter bowl in a larger bowl of iced water.
+            Vegetable Tempura 9</li>
+        <li>Serve the tempura immediately with the grated daikon on the side. Mix some grated daikon into the dipping sauce for a refreshing taste and dip the tempura pieces in the dipping sauce to enjoy.</li>
+       </ol></p>
     </body>
 </html>
