add links to recipes on index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-       <p> <a href="recipes/veg-tempura.html">Vegetable tempura</a></p>
+        <ul>
+        <li><a href="recipes/veg-tempura.html">Vegetable tempura</a></li>
+        <li><a href="recipes/veg-ramen.html">Vegetarian ramen</a></li>
+        <li><a href="recipes/sakura-mochi.html">Sakura mochi</a></li>
+        </ul>
 
        
     </body>
