add style.css file, declaration and classes in htmls

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en>">
+    <link rel="stylesheet" href="style.css">
     <head>
         <meta charset="UTF-8">
         <title>The Odin Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="title">The Odin Recipes</h1>
         <ul>
         <li><a href="recipes/veg-tempura.html">Vegetable tempura</a></li>
         <li><a href="recipes/veg-ramen.html">Vegetarian ramen</a></li>
