--- a/recipes/sakura-mochi.html
+++ b/recipes/sakura-mochi.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Sakura Mochi</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>Sakura mochi</h1>
+        <h1 class="title">Sakura mochi</h1>
         <p> <img src="../img/sakura-mochi.jpg" alt="picture of mochi cookie wrapped in sakura leaf"></p>
 
-       <p><h4>Description</h4></p>
+       <p><h4 class="title">Description</h4></p>
 
        <p>Spring is in the air and flowers are blooming. Everyone anticipates cherry blossom season. While we wait for the trees to come into full bloom, let’s make Sakura Mochi (桜餅). It’s a popular spring-themed Japanese confectionery along with Hanami Dango.
 
@@ -19,7 +20,7 @@
 
        </p>
 
-       <p><h4>Ingredients:</h4></p>
+       <p><h4 class="title">Ingredients:</h4></p>
 
        <p><ul>
         <li>Short-grain glutinous rice</li>
@@ -30,7 +31,7 @@
         <li>Salt-pickled cherry blossoms</li>
        </ul></p>
 
-       <p><h4>Preparation:</h4></p>
+       <p><h4 class="title">Preparation:</h4></p>
 
        <p><ol>
         <li>Rinse the glutinous rice, measure the water, and mix in sugar and red coloring.</li>
