--- a/recipes/veg-ramen.html
+++ b/recipes/veg-ramen.html
@@ -3,19 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>Vegetarian Ramen</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>Vegetarian Ramen</h1>
+        <h1 class="title">Vegetarian Ramen</h1>
         <p> <img src="../img/veg-ramen.jpg" alt="picture of a bowl of vegetarian ramen"></p>
 
-       <p><h4>Description</h4></p>
+       <p><h4 class="title">Description</h4></p>
 
        <p>Is it possible to create a pot of vegetarian ramen broth that rivals the ones that have gone through long simmering of meat bones, cartilage, and fat at all?
        </p>
 
        <p>This recipe teaches you how to use some flavorful ingredients to make umami-rich vegetarian ramen that you’d never guess was devoid of meat.</p>
 
-       <p><h4>Ingredients:</h4></p>
+       <p><h4 class="title">Ingredients:</h4></p>
 
        <p><ul>
         <li>Toppings: Blanched Shanghai bok choy, Ramen Eggs (skip for vegan), vegan kimchi, sweet corn, Spicy Bean Sprout Salad</li>
@@ -26,7 +27,7 @@
         <li>Aromatics including garlic, ginger, and scallions</li>
        </ul></p>
 
-       <p><h4>Preparation:</h4></p>
+       <p><h4 class="title">Preparation:</h4></p>
 
        <p><ol>
         <li>Make the cold brew vegan dashi by soaking kombu and dried shiitake mushrooms in water.</li>
