--- a/recipes/veg-tempura.html
+++ b/recipes/veg-tempura.html
@@ -3,19 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>Vegetable Tempura</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>Vegetable Tempura</h1>
+        <h1 class="title">Vegetable Tempura</h1>
         <p> <img src="../img/veg-tempura.jpg" alt="picture of vegetable tempura"></p>
 
-       <p><h4>Description</h4></p>
+       <p><h4 class="title">Description</h4></p>
 
        <p>Alongside sushi and ramen, tempura is another mandatory menu item for Japanese restaurants. Encased in a crunchy, crispy yet light batter, these perfectly deep-fried seafood, and vegetable are seriously addicting.
        </p>
 
        <p>Some of the common vegetables used for Tempura include Japanese sweet potatoes, mushrooms (shiitake or king oyster are delicious), Kabocha squash, bell peppers, lotus roots, and eggplant. When I make vegetable tempura at home, I also like to include shiso leaves as well.</p>
 
-       <p><h4>Ingredients:</h4></p>
+       <p><h4 class="title">Ingredients:</h4></p>
 
        <p><ul>
         <li>Sweet potato</li>
@@ -26,7 +27,7 @@
         <li>Shiso leaves</li>
        </ul></p>
 
-       <p><h4>Preparation:</h4></p>
+       <p><h4 class="title">Preparation:</h4></p>
 
        <p><ol>
         <li>While the oil is heating up, prepare the tempura batter. Gather all the ingredients.</li>
