add styles in css file

--- a/recipes/sakura-mochi.html
+++ b/recipes/sakura-mochi.html
@@ -11,12 +11,12 @@
 
        <p><h4 class="title">Description</h4></p>
 
-       <p>Spring is in the air and flowers are blooming. Everyone anticipates cherry blossom season. While we wait for the trees to come into full bloom, let’s make Sakura Mochi (桜餅). It’s a popular spring-themed Japanese confectionery along with Hanami Dango.
+       <p class="description-para">Spring is in the air and flowers are blooming. Everyone anticipates cherry blossom season. While we wait for the trees to come into full bloom, let’s make Sakura Mochi (桜餅). It’s a popular spring-themed Japanese confectionery along with Hanami Dango.
 
 
        </p>
 
-       <p>Soft yet chewy, the flavor of the mochi balances beautifully between sweet and salty while bringing forth the fragrant note of cherry blossom.
+       <p class="description-para">Soft yet chewy, the flavor of the mochi balances beautifully between sweet and salty while bringing forth the fragrant note of cherry blossom.
 
        </p>
 
