--- a/recipes/veg-ramen.html
+++ b/recipes/veg-ramen.html
@@ -11,10 +11,10 @@
 
        <p><h4 class="title">Description</h4></p>
 
-       <p>Is it possible to create a pot of vegetarian ramen broth that rivals the ones that have gone through long simmering of meat bones, cartilage, and fat at all?
+       <p class="description-para">Is it possible to create a pot of vegetarian ramen broth that rivals the ones that have gone through long simmering of meat bones, cartilage, and fat at all?
        </p>
 
-       <p>This recipe teaches you how to use some flavorful ingredients to make umami-rich vegetarian ramen that you’d never guess was devoid of meat.</p>
+       <p class="description-para">This recipe teaches you how to use some flavorful ingredients to make umami-rich vegetarian ramen that you’d never guess was devoid of meat.</p>
 
        <p><h4 class="title">Ingredients:</h4></p>
 
