--- a/recipes/veg-tempura.html
+++ b/recipes/veg-tempura.html
@@ -11,10 +11,10 @@
 
        <p><h4 class="title">Description</h4></p>
 
-       <p>Alongside sushi and ramen, tempura is another mandatory menu item for Japanese restaurants. Encased in a crunchy, crispy yet light batter, these perfectly deep-fried seafood, and vegetable are seriously addicting.
+       <p class="description-para">Alongside sushi and ramen, tempura is another mandatory menu item for Japanese restaurants. Encased in a crunchy, crispy yet light batter, these perfectly deep-fried seafood, and vegetable are seriously addicting.
        </p>
 
-       <p>Some of the common vegetables used for Tempura include Japanese sweet potatoes, mushrooms (shiitake or king oyster are delicious), Kabocha squash, bell peppers, lotus roots, and eggplant. When I make vegetable tempura at home, I also like to include shiso leaves as well.</p>
+       <p class="description-para">Some of the common vegetables used for Tempura include Japanese sweet potatoes, mushrooms (shiitake or king oyster are delicious), Kabocha squash, bell peppers, lotus roots, and eggplant. When I make vegetable tempura at home, I also like to include shiso leaves as well.</p>
 
        <p><h4 class="title">Ingredients:</h4></p>
 
